<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.SigninFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/fragment_horizontal_margin"
            android:layout_marginTop="@dimen/fragment_vertical_margin"
            android:layout_marginEnd="@dimen/fragment_horizontal_margin"
            android:hint="@string/etEmail_hint"
            app:helperText="@string/etEmail_helper_text"
            app:helperTextEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/etEmail_default_text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/fragment_horizontal_margin"
            android:layout_marginTop="@dimen/fragment_vertical_margin"
            android:layout_marginEnd="@dimen/fragment_horizontal_margin"
            android:hint="@string/etPassword_hint"
            app:endIconMode="password_toggle"
            app:helperText="@string/etPassword_helper_text"
            app:helperTextEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etEmail">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:text="@string/etPassword_default_text" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/fragment_horizontal_margin"
            android:layout_marginTop="@dimen/fragment_vertical_margin"
            android:layout_marginEnd="@dimen/fragment_horizontal_margin"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etPassword">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btSignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="114dp"
                android:text="@string/btSignIn_text" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btSignUp_text" />
        </LinearLayout>

        <com.facebook.login.widget.LoginButton
            android:id="@+id/fbLoginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="@dimen/fragment_horizontal_margin"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="@dimen/fragment_horizontal_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/googleLoginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/fragment_horizontal_margin"
            android:layout_marginTop="@dimen/fragment_vertical_margin"
            android:layout_marginEnd="@dimen/fragment_horizontal_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fbLoginButton"  />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>