<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/mainFragment">

    <fragment
        android:id="@+id/mainFragment"
        android:name="com.anastasiu.staytfhome.ui.fragment.MainFragment"
        android:label="@string/main_fragment_label"
        tools:layout="@layout/fragment_main">
        <action
            android:id="@+id/action_mainFragment_to_authFlow"
            app:destination="@id/authFlow"
            app:popUpTo="@id/nav_graph"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_mainFragment_to_profileManagerFragment"
            app:destination="@id/profileManagerFragment" />
        <action
            android:id="@+id/action_mainFragment_to_reportManagerFragment"
            app:destination="@id/reportManagerFragment" />
    </fragment>

    <fragment
        android:id="@+id/profileManagerFragment"
        android:name="com.anastasiu.staytfhome.ui.fragment.ProfileManagerFragment"
        android:label="Profile"
        tools:layout="@layout/fragment_profile_manager" >
        <action
            android:id="@+id/action_profileManagerFragment_to_authFlow"
            app:destination="@id/authFlow"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out"
            app:popUpTo="@id/nav_graph"
            app:popUpToInclusive="true" />
    </fragment>

    <navigation
        android:id="@+id/authFlow"
        app:startDestination="@id/signinFragment">
        <fragment
            android:id="@+id/signinFragment"
            android:name="com.anastasiu.staytfhome.ui.fragment.SigninFragment"
            android:label="@string/signin_fragment_label"
            tools:layout="@layout/fragment_signin">
            <action
                android:id="@+id/action_signinFragment_to_signupFragment"
                app:destination="@id/signupFragment"
                app:enterAnim="@anim/slide_in_right"
                app:exitAnim="@anim/slide_out_left"
                app:popEnterAnim="@android:anim/slide_in_left"
                app:popExitAnim="@android:anim/slide_out_right" >
                <argument
                    android:name="invitedBy"
                    android:defaultValue="-1" />
            </action>
            <action
                android:id="@+id/action_signinFragment_pop"
                app:destination="@id/mainFragment"
                app:enterAnim="@android:anim/fade_in"
                app:exitAnim="@android:anim/fade_out"
                app:popUpTo="@id/signinFragment"
                app:popUpToInclusive="true" />
        </fragment>
        <fragment
            android:id="@+id/signupFragment"
            android:name="com.anastasiu.staytfhome.ui.fragment.SignupFragment"
            android:label="@string/signup_fragment_label"
            tools:layout="@layout/fragment_signup">
            <action
                android:id="@+id/action_signupFragment_to_activationRequiredFragment"
                app:destination="@id/activationRequiredFragment"
                app:popUpTo="@id/signinFragment"
                app:popUpToInclusive="false"
                app:enterAnim="@anim/slide_in_right"
                app:exitAnim="@anim/slide_out_left"
                app:popEnterAnim="@android:anim/slide_in_left"
                app:popExitAnim="@android:anim/slide_out_right" />
            <deepLink
                android:id="@+id/invitedByDeepLink"
                android:autoVerify="true"
                app:uri="http://staytfhome.anastasiu.com/signup/{invitedBy}" />
            <argument
                android:name="invitedBy"
                app:argType="integer"
                android:defaultValue="-1" />
        </fragment>
        <fragment
            android:id="@+id/activationRequiredFragment"
            android:name="com.anastasiu.staytfhome.ui.fragment.ActivationRequiredFragment"
            android:label="fragment_activation_required"
            tools:layout="@layout/fragment_activation_required">
            <action
                android:id="@+id/action_activationRequiredFragment_to_signinFragment"
                app:destination="@id/signinFragment"
                app:enterAnim="@android:anim/fade_in"
                app:exitAnim="@android:anim/fade_out" />
        </fragment>
    </navigation>
    <fragment
        android:id="@+id/reportManagerFragment"
        android:name="com.anastasiu.staytfhome.ui.fragment.ReportManagerFragment"
        android:label="@string/report_manager_fragment_label" >
        <action
            android:id="@+id/action_reportManagerFragment_to_reportCreateUpdateFragment"
            app:destination="@id/reportCreateUpdateFragment" />
    </fragment>
    <fragment
        android:id="@+id/reportCreateUpdateFragment"
        android:name="com.anastasiu.staytfhome.ui.fragment.ReportCreateUpdateFragment"
        android:label="ReportCreateUpdateFragment" />

</navigation>